<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_option"
        android:layout_marginLeft="16dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/createAccountUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:text="@string/user" />

    <Button
        android:id="@+id/createAccountCompanyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:text="@string/company" />
</LinearLayout>

